# django-2-llunareine

./: db.sqlite3  pyproject.toml
mysite/: settings.py  urls.py
news/: admin.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py
news/migrations/: 0001_initial.py
news/static/news/: style.css
news/templates/: base.html
news/templates/news/: detail.html  index.html  news_create.html  news_update.html
news/templates/registration/: login.html  sign_up.html
